--- a/style.css
+++ b/style.css
@@ -9,3 +9,15 @@
     font-family: sans-serif;
     font-size: 11px;
 }
+
+.mt{
+	font-style: italic;
+	font-family:MathJax_Main,"Times New Roman",Times,serif;
+	font-size:1.5em;
+	-webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* IE/Edge */
+  user-select: none;   
+}
