--- a/style.css
+++ b/style.css
@@ -33,3 +33,17 @@
 	font-family:MathJax_Main,"Times New Roman",Times,serif;
 	font-size:1.3em;
 }
+
+.quan-display{
+	margin-left:5px;
+	margin-right:5px;
+	font-style: italic;
+	font-family:MathJax_Main,"Times New Roman",Times,serif;
+	font-size:1.3em;
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none;   /* Chrome/Safari/Opera */
+	-khtml-user-select: none;    /* Konqueror */
+	-moz-user-select: none;      /* Firefox */
+	-ms-user-select: none;       /* IE/Edge */
+	user-select: none;  
+}
